Added schedule visualization